--- a/EDU22/index.html
+++ b/EDU22/index.html
@@ -9,7 +9,18 @@
 <body>
 <main>
 <section id="container">
-    
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <h3>Programação</h3>
+        <div class="cartao__conteudo__pergunta"></div>
+        o que é javaScript?
+
+    </div>
+    <div class="cartao__conteudo__resposta">
+        
+    </div>
+    O JavaScript é uma linguagem de programação
+</article> 
 </section>
 </main>
 <footer>
